test/files_test/errors/empty_program.scm
; Test: Empty program - should return exit code 84 or handle gracefully

